
Version 0.7-7 (??-0?-2012, Rev. 12??)
=====================================

- Simes test calculates also pvalues. An extra option pvalues=TRUE is added.
  Setting this to FALSE will sometimes increase the speed (and memory consumption)
  of the Simes test significantly.

- New wizard for the creation of correlation matrices.
  
- Reordering of hypotheses is possible (important for e.g. correlation matrices).
  Java 5 users: Rearranging nodes with drag'n'drop does not yet work for you. 

- If the entered matrix is not positive semidefinite, 
  i.e. negative eigen values exist, a warning is given.

- Variable node weights

- Error reports can be saved as zip files.

- Improved graph analysis

- Improved focus keeping and reliability of description text field.

- Fixed regression in 0.7-6: CI and p-value buttons for parametric tests
  were sometimes enabled and sometimes disabled.

Version 0.7-6 (13-02-2012, Rev. 1208)
=====================================

- JTable behaves slightly different now:
  Whenever a cell gets the focus the CellEditor is opened.
  Also already existing text is selected to make overwriting easier.
  You can change this behavior in the options.

- Fixed: With Java 5 it was sometimes hard to edit the cells of JTables.  

- Fixed: NullpointerException when loading R objects.

- Fixed (regression): greek characters were shown in the 
  adjacency matix with leading backslash
  
- Fixed: In rare cases (i.e. only information about correlation was changed)
  old results were displayed if reset was not used.

- rqmvnorm does not set a seed by default.
 
- If a graph is saved the p-values are automatically attached to the 
  graphMCP objects as an attribute "pvalues".

- New option: Should the exported image of a graph have 
  an white or transparent background.

63 files changed, 591 insertions(+), 277 deletions(-)


Version 0.7-5 (29-01-2012, Rev. 1147)
=====================================
