@@ -2,7 +2,7 @@
 Version 0.7-7 (??-0?-2012, Rev. 12??)
 =====================================
 
-- Simes test calculates also pvalues. An extra option pvalues=TRUE is added.
+- Simes test calculates also pvalues. An extra option adjPValues=TRUE is added.
   Setting this to FALSE will sometimes increase the speed (and memory consumption)
   of the Simes test significantly.
 
@@ -13,6 +13,8 @@ Version 0.7-7 (??-0?-2012, Rev. 12??)
 
 - If the entered matrix is not positive semidefinite, 
   i.e. negative eigen values exist, a warning is given.
+
+- New S4 method getMatrix for getting the adjacency matrix from a graphMCP object.
 
 - Variable node weights
 
